# model/user.js
@@ -1,13 +1,23 @@
 // User model and in-memory storage
+const bcrypt = require("bcryptjs");
+
 const users = [];
 
 class User {
-  constructor({ id, name, email, password }) {
+  constructor({ id, username, password }) {
     this.id = id;
-    this.name = name;
-    this.email = email;
+    this.username = username;
     this.password = password; // hashed
   }
 }
+
+// Usuário padrão criado na memória
+users.push(
+  new User({
+    id: "1",
+    username: "celia.bruno",
+    password: bcrypt.hashSync("123456", 8),
+  })
+);
 
 module.exports = { User, users };
